<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTagActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/TempleTagTheme"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Create a new Tag"
        app:titleTextColor="#FFFFFF" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/tagLocationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="monospace"
        android:hint="@string/tag_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/TempleTagTheme"
        tools:layout_editor_absoluteY="84dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/tagDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="monospace"
        android:hint="@string/tag_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/TempleTagTheme"
        tools:layout_editor_absoluteY="222dp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/TempleTagTheme"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="341dp" />

</androidx.constraintlayout.widget.ConstraintLayout>